@@ -1,5 +1,6 @@
 package com.example.news_feed.user.controller;
 import com.example.news_feed.comment.dto.response.CommentDetailDto;
+import com.example.news_feed.common.exception.HttpException;
 import com.example.news_feed.post.dto.response.PostDetailDto;
 import com.example.news_feed.user.dto.response.UserDetailDto;
 import com.example.news_feed.auth.security.UserDetailsImpl;
@@ -19,7 +20,9 @@ import org.springframework.data.web.SortDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import java.util.List;
@@ -39,15 +42,18 @@ public class MypageApiController {
                                                          @RequestBody @Valid UserUpdateDto userUpdateDto,
                                                          @AuthenticationPrincipal UserDetailsImpl userDetails,
                                                          BindingResult bindingResult){
+
         // 조건에 맞지 않으면 에러 메시지 출력
         if (bindingResult.hasErrors()) {
             List<String> errorMessages = bindingResult.getAllErrors()
                     .stream()
                     .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                    .toList();
-            UserResponseDto response = UserResponseDto.res(HttpStatus.BAD_REQUEST.value(), errorMessages.toString());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+                    .collect(Collectors.toList());
+
+            throw new HttpException(errorMessages.toString(), HttpStatus.BAD_REQUEST);
+
         }
+
         userUpdateDto.setUserId(userDetails.getId());
         mypageServiceImpl.updateProfile(userId, userUpdateDto);
         UserResponseDto response = UserResponseDto.res(HttpStatus.OK.value(), "프로필 수정 완료");
@@ -89,8 +95,8 @@ public class MypageApiController {
                     .map(error -> error.getDefaultMessage())
                     .collect(Collectors.toList());
 
-            UserResponseDto response = UserResponseDto.res(HttpStatus.BAD_REQUEST.value(), errorMessages.toString());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+            throw new HttpException(errorMessages.toString(), HttpStatus.BAD_REQUEST);
+
         }
 
         mypageServiceImpl.updatePwd(userDetails, userId, pwdUpdateDto);
